Fixed spacing

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ img {
 width: 250px;
 height: 250px;
 border-radius: 50%;
+transition: 0.3s;
 
 }
 
@@ -40,11 +41,11 @@ border-radius: 50%;
     justify-content: center;
     align-items: center;
    /* background-color: blueviolet; */
-    margin-top: 110px;
-    flex-wrap: wrap;
+    margin-top: 70px;
+    flex-wrap: nowrap;
     /*width: 70vw;*/
-    margin-left: 40%;
-    margin-right: 40%;
+    margin-left: 37%;
+    margin-right: 37%;
     flex: auto;
     
     
@@ -111,7 +112,11 @@ border-radius: 50%;
     color: beige;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom :20px;
-
+    flex-grow: 0; 
+    flex-shrink: 0; 
+    margin-left: 20px;
+    margin-right: 20px;
+    
 }
 
 button {
